<resources>
    <string name="app_name">CCi-MOBILE</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="settings">Settings</string>
    <string name="environments">Environments</string>

    <string name="updateMapBtn">Update Map</string>

    <string name="earText">Ear</string>
    <string name="implantTypeText">Implant Type</string>
    <string name="soundProcessingText">Sound Processing Strategy</string>
    <string name="samplingFreqText">Sampling Frequency (kHz) </string>
    <string name="numChannelsText">Number of Channels</string>
    <string name="nMaximaText">nMaxima</string>
    <string name="stimulationModeText">Stimulation Mode</string>
    <string name="stimulationRateText">Stimulation Rate (pps)</string>
    <string name="pulseWidthText">Pulse Width (us)</string>
    <string name="sensitivityText">Sensitivity</string>
    <string name="gainText">Gain (dB)</string>
    <string name="volumeText">Volume</string>
    <string name="qFactorText">Q-factor</string>
    <string name="baseLevelText">Base Level</string>
    <string name="saturationLevelText">Saturation Level</string>
    <string name="stimulationOrderText">Stimulation Order</string>
    <string name="freqTableText">Frequency Table</string>
    <string name="windowText">Window</string>

    <string name="stuff">…</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="electrodeString">El</string>
    <string name="numBand">Band #</string>
    <string name="THRstring">THR</string>
    <string name="MCLstring">MCL</string>
    <string name="gainString">Gain</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twentyone">21</string>
    <string name="twentytwo">22</string>
    <string name="cci_mobile">CCi-MOBILE</string>
    <string name="not_connected">Not Connected</string>
    <string name="left_sensitivity">Left Sensitivity:</string>
    <string name="left_gain">Left Gain:</string>
    <string name="right_sensitivity">Right Sensitivity:</string>
    <string name="right_gain">Right Gain:</string>
    <string name="Connecting3">Connecting…</string>
    <string name="Connecting1">Connecting.</string>
    <string name="Connecting2">Connecting..</string>
    <string name="leftSensitivityPlaceholder">Left Sensitivity: %1$d</string>

    <string-array name="volumeSpinnerItems">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="instruments_spinner">
        <item>Clarinet</item>
    </string-array>

    <string-array name="numberofinstruments_spinner">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="complexity_spinner">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="strategySpinnerItems">
        <item>ACE</item>
    </string-array>

    <string-array name="stimModeSpinnerItems">
        <item>MP1+2</item>
    </string-array>

    <string-array name="stimOrderSpinnerItems">
        <item>base-to-apex</item>
        <item>apex-to-base</item>
        <item>no order</item>
    </string-array>

    <string-array name="windowSpinnerItems">
        <item>Hanning</item>
        <item>Hamming</item>
        <item>Blackman</item>
    </string-array>

    <string name="manage_maps_text">Please select your MAP.</string>
    <string name="manage_map_filename">Your MAP filename:</string>
    <string name="dotdotdot">…</string>
    <string name="manage_map_button">SELECT MAP</string>
    <string name="textReady">Ready</string>
    <string name="textConnected">Connected</string>
    <string name="textLeftSens">Left Sensitivity</string>
    <string name="textLeftGain">Left Gain (dB)</string>
    <string name="textRunning">Running</string>
    <string name="textStopped">Stopped</string>
    <string name="textRightSens">Right Sensitivity</string>
    <string name="textRightGain">Right Gain (dB)</string>
    <string name="textStep1">Step 1 completed</string>
    <string name="textStep2">Step 2 completed</string>
    <string name="textSaveMap">Save MAP</string>
    <string name="textMAPSelect">Please select a MAP.</string>
    <string name="textMAPfilename">Map filename:</string>
    <string name="imageDesc">Connection status symbol</string>
    <string name="textftDevnull">ftDev is null</string>
    <string name="textftDevset">ftDev is set</string>
    <string name="textBoardReadyNow">BOARD IS READY NOW</string>
    <string name="textStatusTextOut" />
    <string name="textDeviceNull">DEVICE IS NULL</string>
    <string name="textCurrentMAP">Current MAP:</string>
    <string name="textFilename">Example: my_map </string>
    <string name="textSelectAE">Select an acoustic environment</string>
    <string name="classroom_image">Classroom image</string>
    <string name="classroom">Classroom</string>
    <string name="conversation">Conversation</string>
    <string name="leisure">Leisure</string>
    <string name="market">Market</string>
    <string name="tv">TV</string>
    <string name="driving">Driving</string>
    <string name="title_activity_settings_tabbed">SettingsActivityTabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="on_off">On/Off</string>
    <string name="electrode">Electrode</string>


</resources>
