<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cilab.utdallas.edu.ccimobile.MainActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutRight"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/textSaveMap" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="top"
        android:id="@+id/linearLayoutTop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/cci_mobile"
            android:id="@+id/textStatus"
            android:gravity="bottom"
            android:textColor="#ff5100ff"
            android:layout_weight="2"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/not_connected"
            android:id="@+id/textConnectionStatus"
            android:gravity="end" />

        <ImageView
            android:layout_gravity="end"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:id="@+id/imageStatus"
            android:src="@drawable/disconnected"
            android:contentDescription="@string/imageDesc" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/linearLayoutLeft">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLeftSens"
            android:id="@+id/textViewLeftSensitivity"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarLeftSensitivity"
            android:max="100"
            android:progress="23"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLeftGain"
            android:id="@+id/textViewLeftGain"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarLeftGain"
            android:max="50"
            android:progress="25"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutLeft"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutRight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textRightSens"
            android:id="@+id/textViewRightSensitivity"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarRightSensitivity"
            android:max="100"
            android:progress="23"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textRightGain"
            android:id="@+id/textViewRightGain"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarRightGain"
            android:max="50"
            android:progress="25"
            android:layout_marginBottom="30dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggleButtonStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:checked="false"
            android:onClick="startOrStop"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/selectMAPbutton"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutRight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/button6"
        android:onClick="selectMAP"
        android:text="@string/manage_map_button" />

    <TextView
        android:id="@+id/textView214"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectMAPbutton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/textMAPfilename" />

    <TextView
        android:id="@+id/textView215"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/textView214"
        android:text="@string/textMAPSelect" />


</RelativeLayout>